--- a/zero-admin/src/main/resources/i18n/messages_en_US.properties
+++ b/zero-admin/src/main/resources/i18n/messages_en_US.properties
@@ -1,4 +1,4 @@
-#????
+#错误消息
 not.null=* Required fill in
 user.jcaptcha.error=Captcha error
 user.jcaptcha.expire=Captcha invalid
@@ -6,9 +6,9 @@ user.not.exists=Sorry, your account: {0} does not exist
 user.password.not.match=User does not exist/Password error
 user.password.retry.limit.count=Password input error {0} times
 user.password.retry.limit.exceed=Password input error {0} times, account locked for {1} minutes
-user.password.delete=Sorry, your account?{0} has been deleted
+user.password.delete=Sorry, your account：{0} has been deleted
 user.blocked=Sorry, your account: {0} has been disabled. Please contact the administrator
-role.blocked=Role disabled?please contact administrators
+role.blocked=Role disabled，please contact administrators
 user.logout.success=Exit successful
 length.not.valid=The length must be between {min} and {max} characters
 user.username.not.blank=Username cannot be blank
@@ -26,22 +26,22 @@ user.register.success=Register successful
 user.register.save.error=Failed to save user {0}, The registered account already exists
 user.register.error=Register failed, please contact system administrator
 user.notfound=Please login again
-user.forcelogout=The administrator is forced to exit?please login again
+user.forcelogout=The administrator is forced to exit，please login again
 user.unknown.error=Unknown error, please login again
 auth.grant.type.error=Auth grant type error
 auth.grant.type.blocked=Auth grant type disabled
 auth.grant.type.not.blank=Auth grant type cannot be blank
 auth.clientid.not.blank=Auth clientid cannot be blank
-##??????
-upload.exceed.maxSize=The uploaded file size exceeds the limit file size?<br/>the maximum allowed file size is?{0}MB?
+##文件上传消息
+upload.exceed.maxSize=The uploaded file size exceeds the limit file size！<br/>the maximum allowed file size is：{0}MB！
 upload.filename.exceed.length=The maximum length of uploaded file name is {0} characters
-##??
-no.permission=You do not have permission to the data?please contact your administrator to add permissions [{0}]
-no.create.permission=You do not have permission to create data?please contact your administrator to add permissions [{0}]
-no.update.permission=You do not have permission to modify data?please contact your administrator to add permissions [{0}]
-no.delete.permission=You do not have permission to delete data?please contact your administrator to add permissions [{0}]
-no.export.permission=You do not have permission to export data?please contact your administrator to add permissions [{0}]
-no.view.permission=You do not have permission to view data?please contact your administrator to add permissions [{0}]
+##权限
+no.permission=You do not have permission to the data，please contact your administrator to add permissions [{0}]
+no.create.permission=You do not have permission to create data，please contact your administrator to add permissions [{0}]
+no.update.permission=You do not have permission to modify data，please contact your administrator to add permissions [{0}]
+no.delete.permission=You do not have permission to delete data，please contact your administrator to add permissions [{0}]
+no.export.permission=You do not have permission to export data，please contact your administrator to add permissions [{0}]
+no.view.permission=You do not have permission to view data，please contact your administrator to add permissions [{0}]
 repeat.submit.message=Repeat submit is not allowed, please try again later
 rate.limiter.message=Visit too frequently, please try again later
 sms.code.not.blank=Sms code cannot be blank
@@ -54,7 +54,7 @@ xcx.code.not.blank=Mini program [code] cannot be blank
 social.source.not.blank=Social login platform [source] cannot be blank
 social.code.not.blank=Social login platform [code] cannot be blank
 social.state.not.blank=Social login platform [state] cannot be blank
-##??
+##租户
 tenant.number.not.blank=Tenant number cannot be blank
 tenant.not.exists=Sorry, your tenant does not exist. Please contact the administrator
 tenant.blocked=Sorry, your tenant is disabled. Please contact the administrator
